# jit-aot-compiler-course

./: .gitignore  CMakeLists.txt  README.md
Analyzers/: dominatorAnalyzer.cpp  dominatorAnalyzer.h  linearOrderAnalyzer.cpp  linearOrderAnalyzer.h  livenessAnalyzer.cpp  livenessAnalyzer.h  loopAnalyzer.cpp  loopAnalyzer.h  regAlloc.cpp  regAlloc.h  util.cpp  util.h
IR/: basicBlock.cpp  basicBlock.h  graph.cpp  graph.h  irDumper.cpp  irDumper.h
IR/instructions/: binaryOperationInstr.cpp  binaryOperationInstr.h  callInstr.cpp  callInstr.h  castInstr.cpp  castInstr.h  constantInstr.cpp  constantInstr.h  ifInstr.cpp  ifInstr.h  instr.cpp  instr.h  instrMapping.h  jumpInstr.h  paramInstr.cpp  paramInstr.h  phiInstr.cpp  phiInstr.h  returnInstr.cpp  returnInstr.h  type.h
IR/intsructions/: binaryOperationInstr.h  callInstr.h  castInstr.h  constantInstr.h  instr.h  instrMapping.h  jumpInstr.h  paramInstr.h  phiInstr.h  returnInstr.h  type.h
IRBuilder/: irBuilder.h  sourceIrBuilder.cpp  sourceIrBuilder.h
Passes/: constantFolding.cpp  constantFolding.h  pass.cpp  pass.h  peepholes.cpp  peepholes.h
tests/: CMakeLists.txt  constant_folding-expected.txt  constant_folding.cpp  find_dominators-expected.txt  find_dominators.cpp  find_linear_order.cpp  find_live_ranges.cpp  find_loops-expected.txt  find_loops.cpp  ir_build_factorial-expected.txt  ir_build_factorial.cpp  peepholes-expected.txt  peepholes.cpp  reg_alloc_1.cpp  reg_alloc_2.cpp  reg_alloc_3.cpp  source_ir_builder_1-expected.txt  source_ir_builder_1.cpp  source_ir_builder_2-expected.txt  source_ir_builder_2.cpp  source_ir_builder_2.fa  source_ir_builder_3-expected.txt  source_ir_builder_3.fa  source_ir_builder_4-expected.txt  source_ir_builder_4.cpp  source_ir_builder_4.fa  source_ir_builder_5-expected.txt  source_ir_builder_5.cpp  source_ir_builder_5.fa  test_linear_order_1-expected.txt  test_linear_order_1.fa  test_linear_order_2-expected.txt  test_linear_order_2.fa  test_linear_order_3-expected.txt  test_linear_order_3.fa  test_liveness_1-expected.txt  test_liveness_1.fa  test_liveness_2-expected.txt  test_liveness_2.fa  test_liveness_3-expected.txt  (+5 more)
tests/utils/: util.cpp  util.h
utils/: macro.h
